--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   audioplayers: ^0.16.1
-
+  random_color: ^1.0.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
